# AutoXGBoost

./: .gitlab-ci.yml  Doxyfile  ReadMe.md  setup.cfg  setup.py
.ci/: aptPackagesToInstall.txt  installPhaseCustomCommands.sh  pythonPackagesToInstallFromGit.txt  pythonStdlibFixes.sh
AutoXGBoost/: __init__.py  balancers.py  crossvalidation.py  defaults.py  formats.py  glue.py  gridSpec.py  imports.py  models.py  utils.py
AutoXGBoost/core/: FormatConverter.py  __init__.py
tests/: tests.py
tests/models/: bestHyperparams.json
