[metadata]
name = AutoXGBoost
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/AutoXGBoost.py
description = Semi-automatically trains, optimizes, converts and imports XGBoost models.
long_description = file: ReadMe.md
keywords = xgboost, data science, machine learning
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science

[options]
python_requires = >=3.4
zip_safe = True
packages = AutoXGBoost, AutoXGBoost.core
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests.SimpleTests

install_requires = 
	numpy
	scipy
	pandas
	scikit_learn
	tqdm @ git+https://github.com/tqdm/tqdm.git
	lazily @ git+https://gitlab.com/KOLANICH/lazily.py.git
	xgboost
	Chassis @ git+https://gitlab.com/KOLANICH/Chassis.py.git
	pathvalidate @ git+https://github.com/thombashi/pathvalidate.git

[options.extras_require]
python models export = pyxgboost @ https://gitlab.com/KOLANICH/pyxgboost/-/jobs/artifacts/master/raw/wheels/pyxgboost-0.CI-py3-none-any.whl?job=build
hyperpafams optimization = UniOpt @ git+https://gitlab.com/KOLANICH/UniOpt.py.git
dataset rebalancing = imbalanced_learn @ git+https://github.com/scikit-learn-contrib/imbalanced-learn.git